Details
-
Bug
-
Resolution: Done
-
Not Evaluated
-
None
-
Qt Creator 4.13.0-rc1
-
None
Description
Attachments
Issue Links
- relates to
-
QTCREATORBUG-23404 Timeline curve editor: Icons not visible in default theme
-
- Closed
-
For Gerrit Dashboard: QTCREATORBUG-24402 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
324990,2 | QmlDesigner: Fix the color of some toolbar icons | master | qt-creator/qt-creator | Status: MERGED | +2 | 0 |
325026,5 | QmlDesigner: Fix dockwidgets.css for default theme | master | qt-creator/qt-creator | Status: MERGED | +2 | 0 |
325994,2 | QmlDesigner: Fix timelineView palette for the flat theme | master | qt-creator/qt-creator | Status: MERGED | +2 | 0 |
327878,2 | ProjectExplorer: Don't enforce FlatModel::data's ForegroundRole | master | qt-creator/qt-creator | Status: MERGED | +2 | 0 |