QmlDesigner: Fix the color of some toolbar icons

Give them the standard Theme::IconsBaseColor that works well with all
themes.

Task-number: QTCREATORBUG-24402
Change-Id: I458d1b4a7b3cceb2d318ff4257b4aa173170a533
Reviewed-by: Henning Gründl <henning.gruendl@qt.io>
Reviewed-by: Thomas Hartmann <thomas.hartmann@qt.io>